# Carboncoach

./: .gitignore  ACCESSIBILITY_COMPLIANCE_REPORT.md  LICENSE  README.md  SECURITY.md  SECURITY_NOTES.md  pyproject.toml  vercel.json
backend/: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  database.py  limiter.py  main.py
backend/app/data/: actions_library.json  emission_factors.json
backend/app/models/: __init__.py  schemas.py  user.py
backend/app/prompts/: action_gen.txt  checkin.txt  excuse.txt  onboarding.txt
backend/app/routers/: __init__.py  actions.py  assessment.py  chat.py
backend/app/security/: __init__.py  headers.py  validators.py
backend/app/services/: __init__.py  action_service.py  action_utils.py  assessment_service.py  chat_service.py  chat_utils.py  constants.py  footprint_energy_food.py  footprint_service.py  footprint_utils.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_chat_endpoint.py
backend/tests/security/: README.md  test_headers.py  test_validators.py
backend/tests/unit/: test_action_service.py  test_footprint_food.py  test_footprint_service.py
docs/: ai-evaluator-guide.md  api.md  architecture.md  demo-script.md  dependency-audit.md  emission-factors.md  judge-walkthrough.md  repository-quality.md  scoring-matrix.md  security-architecture.md  security-checklist.md  testing-strategy.md  threat-model.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
(+34 files in other folders)
