[tool.poetry]
name = "carboncoach-backend"
version = "0.1.0"
description = "AI coach for real carbon reductions"
authors = ["CarbonCoach Contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
supabase = "^2.0.0"
anthropic = "^0.15.0"
slowapi = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
